--- a/s.css
+++ b/s.css
@@ -1,3 +1,9 @@
+html {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
 body {
     width: 200px;
     height: 180px;
