--- a/s.css
+++ b/s.css
@@ -37,7 +37,7 @@ body p {
 
 body h2 {
     color: #F7879A;
-    font-family: 'Roboto', sans-serief;
+    font-family: 'Roboto', sans-serif;
 }
 
 .upgrade-button {
