--- a/s.css
+++ b/s.css
@@ -55,6 +55,7 @@ body h2 {
 #piggyTitle,
 #buttons-container {
     text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
 
 button:hover {
