--- a/s.css
+++ b/s.css
@@ -1,4 +1,4 @@
-body {
+5body {
     width: 200px;
     height: 180px;
     background-color: #f1f1f1;
@@ -363,7 +363,7 @@ button:hover {
 }
 
 #emoji-container span {
-    position: relative;
+    position: absolute;
     animation: fadeOut 0.5s linear forwards;
 }
 
